# ruff

./: Cargo.toml
crates/red_knot/: Cargo.toml
crates/red_knot_python_semantic/src/: lib.rs  node_key.rs  semantic_index.rs
crates/red_knot_python_semantic/src/semantic_index/: symbol.rs
crates/red_knot_python_semantic/src/util/: mod.rs  nodes.rs
crates/red_knot_server/: Cargo.toml
crates/red_knot_server/src/: server.rs
crates/red_knot_server/src/server/: api.rs
crates/red_knot_server/src/server/api/: requests.rs
crates/tsp/: Cargo.toml
crates/tsp/src/: main.rs
crates/tsp_server/: Cargo.toml
crates/tsp_server/src/: lib.rs  server.rs
crates/tsp_server/tests/: smoke.rs
crates/ty/src/: args.rs  lib.rs
crates/ty_server/src/: lib.rs  server.rs  session.rs
crates/ty_server/src/server/: api.rs  main_loop.rs  tsp_server.rs
crates/ty_server/src/server/tsp/: mod.rs  protocol.rs
crates/ty_server/tests/e2e/: main.rs  tsp.rs
crates/ty_server/tests/e2e/snapshots/: e2e__tsp__get_type_annotated_function_call.snap  e2e__tsp__get_type_annotated_method_call.snap  e2e__tsp__get_type_annotated_variable.snap  e2e__tsp__get_type_attribute_access.snap  e2e__tsp__get_type_boolean_literal.snap  e2e__tsp__get_type_builtin_function_call.snap  e2e__tsp__get_type_class_definition.snap  e2e__tsp__get_type_class_instance.snap  e2e__tsp__get_type_class_method.snap  e2e__tsp__get_type_comment.snap  e2e__tsp__get_type_dict_literal.snap  e2e__tsp__get_type_dict_method.snap  e2e__tsp__get_type_end_of_line.snap  e2e__tsp__get_type_function.snap  (+9 more)
(+41 files in other folders)
