[package]
name = "tsp"
version = "0.0.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
tsp_server = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
