[package]
name = "tsp_server"
version = "0.0.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
ty_server = { workspace = true }
ruff_db = { workspace = true, features = ["os"] }

anyhow = { workspace = true }
crossbeam = { workspace = true }
lsp-server = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
lsp-types = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
